<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielraniel.envision.wash.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSettings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_wordmark" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageButton
            android:id="@+id/imageButtonCancelSettings"
            android:layout_width="wrap_content"
            android:layout_marginBottom="40dp"
            android:src="@drawable/selector_btn_cancel"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_change_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextNewConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewChangeBusinessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_change_business_establishment_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextNewBusinessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_business_establishment_name"
            android:inputType="textCapSentences" />

        <ImageButton
            android:id="@+id/imageButtonDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/selector_btn_delete_account" />
        <ImageButton
            android:id="@+id/imageButtonSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/selector_btn_save_changes" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
